--- a/app/src/main/res/layout/details_activity_layout.xml
+++ b/app/src/main/res/layout/details_activity_layout.xml
@@ -1,338 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    android:id="@+id/top"
     android:layout_width="match_parent"
-    android:background="@color/colorPrimary"
-    android:layout_height="match_parent">
-    <LinearLayout
+    android:layout_height="match_parent"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:elevation="0dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!--START OF FloatingActionButton and set it to bottom|center-->
+    <FrameLayout
+        android:id="@+id/frame_detailsFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:background="@color/colorPrimary"
-    android:layout_height="wrap_content">
-
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="280dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/cover"
-        android:id="@+id/cover"
-        />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:rotation="180"
-        android:visibility="visible"
-        android:src="@drawable/dark_gradient"
-        android:layout_alignParentBottom="true"
-        />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Fantastic Beasts and Where to Find Them"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="22sp"
-        android:layout_margin="10dp"
-        android:id="@+id/title"
-        android:layout_alignParentBottom="true"
-        />
-
-
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingRight="10dp"
-        android:paddingLeft="10dp"
-        android:layout_marginTop="170dp"
-        android:orientation="horizontal" >
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            >
-            <ImageView
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:src="@drawable/oval"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2016"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:textColor="@color/white"
-                android:id="@+id/year"
-                />
-        </RelativeLayout>
-        <LinearLayout
-            android:layout_gravity="right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentRight="true"
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
-                <RatingBar
-                    android:id="@+id/ratingBar"
-                    android:layout_width="85dp"
-                    android:layout_height="wrap_content"
-                    android:numStars="5"
-                    android:stepSize="1"
-                    android:rating="3.5"
-                    android:padding="3dp"
-                    android:layout_gravity="center"
-                    style="?android:attr/ratingBarStyleSmall"
-                    android:theme="@style/RatingBar"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="33547 votes"
-                    android:layout_gravity="center"
-                    android:textColor="@color/textcolor"
-                    android:id="@+id/voteCount"
-                    />
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=" 8.5"
-                android:textSize="34sp"
-                android:textColor="@color/white"
-                android:id="@+id/rating"
-                />
-        </LinearLayout>
-    </RelativeLayout>
-
+        android:background="@color/colorPrimary" />
 </RelativeLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="8dp"
-                app:srcCompat="@drawable/if_access_time_326483"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2h 33min"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:textColor="@color/white"
-                android:id="@+id/runtime"
-                />
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:id="@+id/layout_genre1"
-                android:visibility="invisible"
-                android:background="@drawable/oval_dark">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Family"
-                                android:textSize="12sp"
-                                android:paddingLeft="8dp"
-                                android:paddingRight="8dp"
-                                android:textStyle="normal"
-                                android:id="@+id/genre1"
-                                android:layout_centerHorizontal="true"
-                                android:layout_centerVertical="true"
-                                android:textColor="@color/white"
-                                />
-                        </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:id="@+id/layout_genre2"
-                android:visibility="invisible"
-                android:background="@drawable/oval_dark">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Action"
-                    android:textSize="12sp"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:textStyle="normal"
-                    android:id="@+id/genre2"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:textColor="@color/white"
-                    />
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="3dp"
-                android:id="@+id/layout_genre3"
-                android:visibility="invisible"
-                android:background="@drawable/oval_dark">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="adventure"
-                    android:textSize="12sp"
-                    android:textStyle="normal"
-                    android:paddingLeft="8dp"
-                    android:paddingRight="8dp"
-                    android:id="@+id/genre3"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:textColor="@color/white"
-                    />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingRight="10dp"
-                android:gravity="right">
-                <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:id="@+id/like"
-                    app:srcCompat="@drawable/if_heart_1814104"
-                    />
-            </RelativeLayout>
-
-        </LinearLayout>
-        <LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_margin="10dp"
-    >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Storyline"
-        android:textSize="18sp"
-        android:layout_marginBottom="8dp"
-        android:textColor="@color/textcolor"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/storyline"
-        android:textColor="@color/white"
-        android:id="@+id/overview"
-        />
-</LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp"
-            android:id="@+id/actors_layout">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cast"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_margin="5dp"
-                android:textColor="@color/textcolor"          />
-
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/recyclerView_actors"
-                />
-
-
-        </LinearLayout>
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp"
-                android:visibility="visible"
-                android:id="@+id/trailer_layout"
-                android:background="@color/lightcolor">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Trailers"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_margin="5dp"
-                    android:textColor="@color/textcolor"          />
-
-                <android.support.v7.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/recyclerView_trailers"
-                    />
-
-
-            </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="10dp"
-            android:visibility="visible"
-            android:id="@+id/crew_layout"
-            android:background="@color/lightcolor">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Trailers"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:layout_margin="5dp"
-                android:textColor="@color/textcolor"          />
-
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/recyclerView_crew"
-                />
-
-
-        </LinearLayout>
-
-
-
-
-
-
-
-
-    </LinearLayout>
-
-</ScrollView>
