--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/thumbnail"
                 android:layout_gravity="center"
                 android:scaleType="centerCrop"
+                android:background="@color/colorPrimary"
                 android:scaleY="1"
                 />
             <ImageView
