--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,6 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimary"
+                android:layout_marginBottom="50dp"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
         </RelativeLayout>
         <!--END OF TOP VIEW-->
