--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,15 +8,15 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="50dp"
     android:orientation="vertical">
-
 
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="60dp"
         android:layout_gravity="center"
         android:visibility="gone"
         android:layout_marginTop="200dp"
@@ -24,6 +24,7 @@
         android:layout_centerVertical="true"
         android:indeterminateDrawable="@drawable/progress" >
     </ProgressBar>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,6 +32,7 @@
         android:id="@+id/layout"
         android:visibility="visible"
         >
+
         <com.daimajia.slider.library.SliderLayout
             android:id="@+id/slider"
             android:layout_width="match_parent"
@@ -39,7 +41,8 @@
             android:background="@color/lightcolor"
             custom:indicator_visibility="visible"
             custom:pager_animation_span="1100"
-            android:layout_height="200dp"/>
+            android:layout_height="230dp"/>
+
         <LinearLayout
             android:orientation="vertical"
             android:id="@+id/card_view"
