--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -20,6 +20,7 @@
         <android.support.v7.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             android:id="@+id/card_view55"
+            android:foreground="@drawable/ripple"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             card_view:cardCornerRadius="5dp">
