--- a/app/src/main/res/layout/progress_layout.xml
+++ b/app/src/main/res/layout/progress_layout.xml
@@ -10,15 +10,16 @@
     <ProgressBar
         android:id="@+id/more_progress"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="40dp"
+        android:indeterminateDrawable="@drawable/progress"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/more_progress"
-        android:padding="5dp"
-        android:text="loadmore"
+        android:padding="10dp"
+        android:text="loadmore.."
         android:textColor="#ffffff"
         android:textSize="15sp" />
 
