--- a/app/src/main/res/layout/alertdialog.xml
+++ b/app/src/main/res/layout/alertdialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_height="wrap_content">
@@ -9,14 +9,15 @@
 
     <ImageView
         android:id="@+id/captcha"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:src="@drawable/cover" />
     <EditText
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:id="@+id/captcha_edit_text"
-        android:hint="C8n19"
+        android:hint="****"
         />
 
 </LinearLayout>
