new updates and fix bugs

--- a/app/src/main/res/layout/alertdialog.xml
+++ b/app/src/main/res/layout/alertdialog.xml
@@ -11,8 +11,7 @@
         android:id="@+id/captcha"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/cover" />
+        android:layout_height="wrap_content" />
     <EditText
         android:layout_width="150dp"
         android:layout_height="wrap_content"
