--- a/app/src/main/res/layout/discoverfragment.xml
+++ b/app/src/main/res/layout/discoverfragment.xml
@@ -5,12 +5,10 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     >
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:text="Discover Fragment"
-    android:textSize="40sp"
-    android:textColor="@color/lightYellow"
-    />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/discover_fragment_recylerview"
+        />
 </RelativeLayout>
