--- a/app/src/main/res/layout/watch_activity.xml
+++ b/app/src/main/res/layout/watch_activity.xml
@@ -5,74 +5,14 @@
     android:background="@color/colorPrimaryDark"
     tools:context=".Activities.WatchActivity"
     >
-
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/Layout_videoplayer"
         >
-
-
-
-        <cn.jzvd.JZVideoPlayerStandard
-            android:id="@+id/videoplayer"
-            android:visibility="visible"
+        <com.halilibo.bettervideoplayer.BetterVideoPlayer
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/player"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-
-        <TextView
-            android:id="@+id/txtDisplay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:padding="10dp"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:gravity="center"
-            fontPath="fonts/GE_SS_Two_Medium.ttf"
-            android:text="hello world for the first time ever " />
-
-
+            android:layout_height="match_parent" />
     </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:id="@+id/Layout_webview"
-        >
-
-        <!-- View that will be hidden when video goes fullscreen -->
-        <RelativeLayout
-            android:id="@+id/nonVideoLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <com.vacuum.app.cinema.Utility.VideoEnabledWebView
-                android:id="@+id/webView"
-                android:background="@color/colorPrimaryDark"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </RelativeLayout>
-
-        <!-- View where the video will be shown when video goes fullscreen -->
-        <RelativeLayout
-            android:id="@+id/videoLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <!-- View that will be shown while the fullscreen video loads (maybe include a spinner and a "Loading..." message) -->
-            <View
-                android:id="@+id/videoLoading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:visibility="invisible" />
-
-        </RelativeLayout>
-    </RelativeLayout>
-
 </RelativeLayout>
